--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <title>Chat App</title>
 </head>
 <body>
+<b>ALARCHAT</b>
+<b>http://alarchat.azurewebsites.net/</b>
 <ul id="messages">
 </ul>
 <form id="form" action="">
