--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/socket.io/socket.io.js"></script>
     <title>Chat App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <b>ALARCHAT</b>
