--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/socket.io/socket.io.js"></script>
-    <title>Chat App</title>
+    <title>AlarChat</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<b>ALARCHAT</b>
+<b>AlarChat</b><br>
 <b>http://alarchat.azurewebsites.net/</b>
 <ul id="messages">
 </ul>
